--- a/mern_stack_full_ecommerce_with_nextjs_backend/package.json
+++ b/mern_stack_full_ecommerce_with_nextjs_backend/package.json
@@ -14,16 +14,18 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.0",
     "typescript": "^5.4.3",
-    "express-async-errors": "^3.1.1"
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/validator": "^13.11.9",
     "ts-node-dev": "^2.0.0"
   }
 }
