--- a/mern_stack_full_ecommerce_with_nextjs_backend/package.json
+++ b/mern_stack_full_ecommerce_with_nextjs_backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node-dev app.ts"
+    "start": "ts-node-dev app.ts",
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
