--- a/mern_stack_full_ecommerce_with_nextjs_backend/tsconfig.json
+++ b/mern_stack_full_ecommerce_with_nextjs_backend/tsconfig.json
@@ -10,7 +10,7 @@
             "node_modules/@types"
         ],     
     },
-    "exclude": ["node_modules", "dist"]
+    "exclude": ["/node_modules", "dist","node_modules"]
 }
 
 
