--- a/mern_stack_full_ecommerce_with_nextjs_website_landing/package.json
+++ b/mern_stack_full_ecommerce_with_nextjs_website_landing/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.3",
     "antd": "^5.16.2",
     "axios": "^1.6.8",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.1.0"
+    "react-icons": "^5.1.0",
+    "react-redux": "^9.1.1"
   },
   "devDependencies": {
     "@types/node": "^20",
